--- a/package.json
+++ b/package.json
@@ -32,10 +32,7 @@
     "cross-env": "^7.0.3",
     "formik": "^2.2.9",
     "next": "^12.1.0",
-<<<<<<< HEAD
-=======
-    "next-mdx-remote": "4.0.0",
->>>>>>> fa3149b (feat: add prismjs)
+    "next-mdx-remote": "^4.1.0",
     "prismjs": "^1.28.0",
     "react": "^17.0.2",
     "react-code-blocks": "^0.0.9-0",
@@ -78,11 +75,7 @@
     "@types/node": "^17.0.22",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^17.0.41",
-<<<<<<< HEAD
     "@types/react-dom": "17.0.17",
-=======
-    "@types/react-dom": "^17.0.17",
->>>>>>> fa3149b (feat: add prismjs)
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
