--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "Apache-2.0",
   "private": false,
   "scripts": {
-    "docker:app:develop": "cross-env DOCKER_BUILDKIT=1 docker-compose -f ./docker-compose_app.yml up --build --remove-orphans --force-recreate",
+    "docker-compose-up": "cross-env DOCKER_BUILDKIT=1 docker-compose -f ./docker-compose_app.yml up --build --remove-orphans --force-recreate",
     "docker:prune-cache": "docker buildx prune",
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
@@ -35,7 +35,6 @@
     "formik": "^2.2.9",
     "next": "^12.1.0",
     "next-mdx-remote": "^4.1.0",
-    "prismjs": "^1.28.0",
     "react": "^17.0.2",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^17.0.2",
