--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ NEXT_PUBLIC_API_VERSION=v1alpha
 NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME=instill-ai-user
 NEXT_PUBLIC_CONSOLE_EDITION=local:ce-dev
 NEXT_PUBLIC_DISABLE_USAGE_COLLECTION=false
+NEXT_PUBLIC_API_GATEWAY_BASE_URL=http://localhost:8080
