--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "private": false,
   "scripts": {
     "docker-build": "docker build -f Dockerfile -t instill-console .",
-    "docker-run": "docker run --rm -t --entrypoint ./entrypoint.sh -p 3000:3000 -e MGMT_BACKEND_BASE_URL='http://localhost:8084' -e CONSOLE_BASE_URL='http://localhost:3000' -e PIPELINE_BACKEND_BASE_URL='http://localhost:8081' -e CONNECTOR_BACKEND_BASE_URL='http://localhost:8082' -e MODEL_BACKEND_BASE_URL='http://localhost:8083' -e API_VERSION='v1alpha' -e INSTILL_AI_USER_COOKIE_NAME='instill-ai-user' instill-console",
+    "docker-run": "docker run --rm -t --entrypoint ./entrypoint.sh -p 3000:3000 -e NEXT_PUBLIC_CONSOLE_BASE_URL='http://localhost:3000' -e NEXT_PUBLIC_API_GATEWAY_BASE_URL='https://localhost:8080' -e NEXT_PUBLIC_API_VERSION='v1alpha' -e NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME='instill-ai-user' instill-console",
+    "docker-build-test": "docker build -f Dockerfile.playwright -t instill-console-integration .",
+    "docker-run-test": "docker run --rm -t --network host --entrypoint ./entrypoint-playwright.sh -e NEXT_PUBLIC_CONSOLE_BASE_URL='http://localhost:3000' -e NEXT_PUBLIC_API_GATEWAY_BASE_URL='https://localhost:8080' -e NEXT_PUBLIC_API_VERSION='v1alpha' -e NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME='instill-ai-user' instill-console-integration",
     "docker:prune-cache": "docker buildx prune",
     "dev": "bash env.sh && next dev",
     "build": "next build",
