--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "sb": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "prepare": "node -e \"if (process.env.NODE_ENV === 'production'){process.exit(1)} \" || husky install",
     "prettier:fix": "prettier --write",
     "prettier:check": "prettier --check",
@@ -36,11 +36,11 @@
     "copy-to-clipboard": "^3.3.2",
     "cross-env": "^7.0.3",
     "formik": "^2.2.9",
-    "next": "^12.1.0",
+    "next": "^13.1.2",
     "next-mdx-remote": "^4.1.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-code-blocks": "^0.0.9-0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
     "react-query": "^3.38.0",
     "react-select": "^5.3.1",
@@ -53,25 +53,27 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@next/env": "^12.2.3",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-docs": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-interactions": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addons": "^6.5.9",
-    "@storybook/builder-webpack5": "^6.5.9",
-    "@storybook/client-api": "^6.5.9",
-    "@storybook/manager-webpack5": "^6.5.9",
-    "@storybook/react": "^6.5.9",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-actions": "^7.0.0-beta.29",
+    "@storybook/addon-docs": "^7.0.0-beta.29",
+    "@storybook/addon-essentials": "^7.0.0-beta.29",
+    "@storybook/addon-interactions": "^7.0.0-beta.29",
+    "@storybook/addon-links": "^7.0.0-beta.29",
+    "@storybook/addon-postcss": "^3.0.0-alpha.1",
+    "@storybook/addons": "^7.0.0-beta.29",
+    "@storybook/client-api": "^7.0.0-beta.29",
+    "@storybook/react": "^7.0.0-beta.29",
+    "@storybook/react-webpack5": "^7.0.0-beta.29",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@testing-library/dom": "^8.16.0",
     "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/cookie": "^0.5.1",
     "@types/jest": "^28.1.6",
@@ -95,7 +97,7 @@
     "eslint-plugin-playwright": "^0.9.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
-    "eslint-plugin-storybook": "^0.5.13",
+    "eslint-plugin-storybook": "^0.6.10",
     "eslint-plugin-testing-library": "^5.3.1",
     "husky": "^7.0.0",
     "jest": "^27.5.1",
@@ -107,7 +109,8 @@
     "prettier-plugin-tailwindcss": "^0.1.8",
     "react-is": "^18.2.0",
     "require-from-string": "^2.0.2",
-    "storybook-addon-next-router": "^4.0.0",
+    "storybook": "^7.0.0-beta.29",
+    "storybook-addon-next-router": "^4.0.2",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.2",
     "webpack": "^5.70.0"
