--- a/apps/console/tsconfig.json
+++ b/apps/console/tsconfig.json
@@ -19,7 +19,7 @@
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "incremental": true,
+    "incremental": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "plugins": [
