--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@instill-ai/design-system",
-  "version": "0.65.0",
+  "version": "0.65.1-rc.1",
   "description": "Instill AI's design system",
   "repository": "https://github.com/instill-ai/design-system.git",
   "bugs": "https://github.com/instill-ai/design-system/issues",
@@ -28,9 +28,22 @@
     "build:css": "npx tailwindcss -i ./src/styles/global.css -o ./public/tailwind.css",
     "publish-rc": "pnpm rimraf dist && tsup src && pnpm ts-types && pnpm publish --no-git-checks"
   },
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "typings": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.mjs"
+      },
+      "require":{
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.cjs"
+      }
+    },
+    "./css": {
+      "import": "./dist/index.css",
+      "require": "./dist/index.css"
+    }
+  },
   "sideEffects": [
     "**/*.css"
   ],
