--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -10,7 +10,6 @@
     "toolkit",
     "react"
   ],
-
   "scripts": {
     "test": "vitest --run --passWithNoTests",
     "dev": "tsup --watch",
@@ -20,22 +19,29 @@
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx --cache",
     "publish-rc": "pnpm build && pnpm publish --no-git-checks"
   },
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "typings": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      }
     },
     "./server": {
-      "import": "./dist/server/index.mjs",
-      "require": "./dist/server/index.js",   
-      "types": "./dist/server/index.d.ts"
+      "import": {
+        "types": "./dist/server/index.d.ts",
+        "default": "./dist/server/index.mjs"
+      },
+      "require":{
+        "types": "./dist/server/index.d.ts",
+        "default": "./dist/server/index.js"
+      }
     }
   },
   "prettier": "@instill-ai/prettier-config-cortex",
@@ -82,9 +88,6 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^1.10.2",
-    "@codemirror/lang-json": "^6.0.1",
-    "@codemirror/lang-markdown": "^6.2.2",
-    "@codemirror/view": "^6.22.0",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
@@ -119,7 +122,7 @@
     "@tiptap/react": "^2.1.12",
     "@types/lodash.debounce": "^4.0.9",
     "@types/lodash.isequal": "^4.5.8",
-    "@uiw/react-json-view": "2.0.0-alpha.12",
+    "@uiw/react-json-view": "2.0.0-alpha.18",
     "axios": "^1.6.0",
     "clsx": "^1.0.0",
     "cookie": "^0.5.0",
