--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@instill-ai/design-system",
-  "version": "0.65.1-rc.4",
+  "version": "0.65.1-rc.5",
   "description": "Instill AI's design system",
   "repository": "https://github.com/instill-ai/design-system.git",
   "bugs": "https://github.com/instill-ai/design-system/issues",
@@ -39,7 +39,7 @@
         "default": "./dist/index.cjs"
       }
     },
-    "./css": {
+    "./index.css": {
       "import": "./dist/index.css",
       "require": "./dist/index.css"
     }
@@ -85,8 +85,6 @@
     "autoprefixer": "^10.4.14",
     "babel-loader": "^8.2.4",
     "clsx": "^1.1.1",
-    "esbuild": "^0.14.54",
-    "esbuild-node-externals": "^1.4.1",
     "eslint": "^8.12.0",
     "eslint-plugin-storybook": "^0.6.10",
     "husky": "^7.0.0",
