feat: support connecting edges for reference with square brace

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -57,7 +57,7 @@ jobs:
     with:
       target: latest
 
-  pr-head:z
+  pr-head:
     if: github.event_name == 'pull_request'
     name: PR head branch
     runs-on: ubuntu-latest
