--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -57,7 +57,7 @@ jobs:
     with:
       target: latest
 
-  pr-head:
+   pr-head:
     if: github.event_name == 'pull_request'
     name: PR head branch
     runs-on: ubuntu-latest
@@ -123,7 +123,7 @@ jobs:
       - name: Run console integration test (latest)
         run: |
           docker build --build-arg TEST_USER='root' -f Dockerfile.playwright -t console-playwright:latest .
-          docker run -t --rm \
+          docker run -t \
             -e NEXT_PUBLIC_GENERAL_API_VERSION=v1beta \
             -e NEXT_PUBLIC_MODEL_API_VERSION=v1alpha \
             -e NEXT_PUBLIC_CONSOLE_EDITION=local-ce:test \
@@ -136,3 +136,13 @@ jobs:
             --entrypoint ./entrypoint-playwright.sh \
             --name console-integration-test \
             console-playwright:latest
+
+      - name: Copy the test-result to host
+        run: docker cp console-integration-test:/app/apps/console/test-results ./test-results
+      
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: test-results
+          retention-days: 1
