--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -20,7 +20,7 @@
     "e2e:env": "NEXT_ENV_UPDATE_ENV_FILE=false node next-env.mjs",
     "e2e:local": "pnpm e2e:env && npx playwright test --project=chromium",
     "e2e:first-time-login": "pnpm e2e:env && npx playwright test --project=first-time-login",
-    "e2e:ci": "pnpm e2e:env && pnpm e2e:first-time-login && npx playwright test --project=chromium --project=firefox --project=webkit"
+    "e2e:ci": "pnpm e2e:env && pnpm e2e:first-time-login && npx playwright test --project=chromium"
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^1.9.1",
