--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@instill-ai/toolkit",
-  "version": "0.87.0-rc.8",
+  "version": "0.87.0-rc.10",
   "description": "Instill AI's frontend toolkit",
   "repository": "https://github.com/instill-ai/design-system.git",
   "bugs": "https://github.com/instill-ai/design-system/issues",
@@ -68,6 +68,7 @@
     "esbuild": "^0.14.34",
     "eslint": "^8.35.0",
     "fast-glob": "^3.2.12",
+    "json-schema-to-zod": "^2.1.0",
     "openapi-types": "^12.1.3",
     "postcss": "8.4.31",
     "react": "^18.2.0",
@@ -79,7 +80,8 @@
     "tsup": "^6.7.0",
     "tsx": "^4.6.2",
     "typescript": "^5.4.2",
-    "vitest": "^1.2.1"
+    "vitest": "^1.2.1",
+    "zod-to-json-schema": "^3.23.0"
   },
   "publishConfig": {
     "access": "public"
