--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -21,7 +21,7 @@
     "build-storybook": "pnpm build:css && storybook build -c .storybook",
     "test:coverage": "vitest --collectCoverage",
     "ts-types": "tsc --emitDeclarationOnly",
-    "build": "pnpm rimraf dist && tsup src && pnpm ts-types && pnpm build-storybook",
+    "build": "pnpm rimraf dist && tsup src && pnpm ts-types && pnpm storybook build",
     "test": "vitest --run --passWithNoTests",
     "dev": "tsup src --watch",
     "watch:css": "npx tailwindcss -i ./src/styles/global.css -o ./public/tailwind.css --watch",
@@ -55,38 +55,40 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@chromatic-com/storybook": "^1.3.3",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@instill-ai/design-tokens": "workspace:*",
     "@instill-ai/eslint-config-cortex": "workspace:*",
     "@instill-ai/prettier-config-cortex": "workspace:*",
-    "@instill-ai/design-tokens": "workspace:*",
     "@playwright/test": "^1.20.1",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-node-resolve": "^13.1.3",
-    "@storybook/addon-a11y": "^7.0.21",
-    "@storybook/addon-actions": "^7.0.21",
-    "@storybook/addon-essentials": "^7.0.21",
-    "@storybook/addon-interactions": "^7.0.21",
-    "@storybook/addon-links": "^7.0.21",
-    "@storybook/cli": "7.0.21",
+    "@storybook/addon-a11y": "^8.0.9",
+    "@storybook/addon-actions": "^8.0.9",
+    "@storybook/addon-essentials": "^8.0.9",
+    "@storybook/addon-interactions": "^8.0.9",
+    "@storybook/addon-links": "^8.0.9",
+    "@storybook/cli": "^8.0.9",
     "@storybook/mdx2-csf": "^1.1.0",
-    "@storybook/react": "^7.0.21",
-    "@storybook/react-webpack5": "^7.0.21",
-    "@storybook/testing-library": "^0.1.0",
+    "@storybook/nextjs": "^8.0.9",
+    "@storybook/react": "^8.0.9",
+    "@storybook/test": "^8.0.9",
+    "@storybook/react-webpack5": "^8.0.9",
     "@testing-library/jest-dom": "^6.2.1",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "18.2.0",
-    "@types/sanitize-html": "^2.6.2",
+    "@types/sanitize-html": "^2.11.0",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^8.2.4",
     "clsx": "^1.1.1",
     "eslint": "^8.12.0",
-    "eslint-plugin-storybook": "^0.6.10",
+    "eslint-plugin-storybook": "^0.8.0",
     "husky": "^7.0.0",
     "jsdom": "^21.1.1",
     "postcss": "^8.4.24",
@@ -96,7 +98,7 @@
     "require-from-string": "^2.0.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.77.2",
-    "storybook": "^7.0.21",
+    "storybook": "^8.0.9",
     "tailwindcss": "^3.3.2",
     "tsup": "^6.7.0",
     "typescript": "^5.4.2",
@@ -130,7 +132,7 @@
     "class-variance-authority": "^0.6.0",
     "cmdk": "^0.2.0",
     "react-hook-form": "^7.51.0",
-    "sanitize-html": "^2.11.0",
+    "sanitize-html": "^2.13.0",
     "tailwindcss-animate": "^1.0.6",
     "zod": "^3.21.4"
   },
