--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -74,8 +74,8 @@
     "@storybook/mdx2-csf": "^1.1.0",
     "@storybook/nextjs": "^8.0.9",
     "@storybook/react": "^8.0.9",
-    "@storybook/test": "^8.0.9",
     "@storybook/react-webpack5": "^8.0.9",
+    "@storybook/test": "^8.0.9",
     "@testing-library/jest-dom": "^6.2.1",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
@@ -113,6 +113,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@instill-ai/design-tokens": "workspace:*",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
