--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-table": "^8.9.3",
+    "@vercel/og": "^0.6.2",
     "axios": "^1.6.8",
     "clsx": "^1.1.1",
     "cookie": "^0.5.0",
