--- a/package.json
+++ b/package.json
@@ -39,8 +39,5 @@
   "engines": {
     "node": ">=20.0.0"
   },
-  "packageManager": "pnpm@8.8.0",
-  "lint-staged": {
-    "*.{ts,tsx}": "prettier --write"
-  }
+  "packageManager": "pnpm@8.8.0"
 }
