--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "node": ">=20.0.0"
   },
   "lint-staged": {
-    "**/*.{ts,tsx}": [
+    "!**/*.{ts,tsx}": [
       "prettier --write"
     ]
   },
