--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     }
   },
   "lint-staged": {
-    "!**/*.{ts,tsx}": [
+    "**/*.{ts,tsx}": [
       "prettier --write"
     ],
     "**/*.{js,jsx,ts,tsx}": [
