--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -140,11 +140,7 @@
   "engines": {
     "node": ">=14.6.0"
   },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --cache --fix"
-    ]
-  },
+  "packageManager": "pnpm@8.8.0",
   "publishConfig": {
     "access": "public"
   }
