--- a/package.json
+++ b/package.json
@@ -38,5 +38,11 @@
   "engines": {
     "node": ">=20.0.0"
   },
-  "packageManager": "pnpm@8.8.0"
+  "packageManager": "pnpm@8.8.0",
+  "pnpm": {
+    "overrides": {
+      "vite": "^5.2.0",
+      "express": "4.19.2"
+    }
+  }
 }
